[project]
name = "vIQA"
version = "0.6.0"
description = "A Python package for volumetric image quality assessment"
authors = [
    { name = "Lukas Behammer", email = "lukas.behammer@fh-wels.at" },
]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "IQA",
    "image quality assessment",
    "volumetric data",
    "image comparison",
    "CT",
    "computed tomography",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]
license = { file = "LICENSE.txt" }
dependencies = [
    "scipy",
    "numpy",
    "torch",
    "piq",
    "scikit-image",
]

[project.optional-dependencies]
book = [
    "jupyter",
    "matplotlib",
]

#[project.urls]

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

######################################################################
# PDM
#[tool.pdm]

[tool.pdm.dev-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
    "tox",
    "tox-pdm",
]
lint = [
    "mypy",
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx",
    "furo",
]
dev = [
    "vIQA[tests, lint, docs]",
    "meson-python",
    "pdm",
    "build",
]

[tool.pdm.scripts]
pre-commit = "pre-commit run --all-files"
#docs = "sphinx-apidoc -f -o docs/source src/viqa"
#docs = "sphinx-build -M html docs/source docs/build"

######################################################################
# Ruff
[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = [
    ".git",
    "data",
    "docs",
    "build",
    "dist",
    "_private_tests",
    "tests",
]
target-version = "py311"
per-file-ignores = { "__init__.py" = ["F403"] }

[tool.ruff.lint]
preview = true
select = [
    "ARG",
    "B",
    "C4",
    "CPY",
    "D",
    "E",
    "F",
    "I",
    "N",
    "W",
    "C901",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".

[tool.ruff.isort]
known-first-party = ["src/vIQA"]

[tool.ruff.format]
exclude = ["*.ipybn"]

######################################################################
# MyPy
[tool.mypy]
exclude = [
    "tests",
    "docs",
    "build",
    "dist",
    "_private_tests",
    "data",
]
strict = false
pretty = true

[[tool.mypy.overrides]]
module = [
    "scipy",
    "scipy.ndimage",
    "scipy.fft",
    "piq",
]
ignore_missing_imports = true

######################################################################
# PyTest
[tool.pytest.ini_options]
addopts = "--doctest-plus --doctest-continue-on-failure --cov=src --cov-append --cov-report html"

######################################################################
# Coverage
[tool.coverage.run]
omit = [
    "src/viqa/_private_tests/*",
    "src/viqa/tests/*",
    "*/sphinxext/*",
    "*/tmp/tmp*.py",
    "docs/*",
]
