python_sources = [
    '__init__.py',
    'kernels.py',
    '_metrics.py',
    'deprecation.py',
    'load_utils.py',
    'visualization_utils.py',
    'utils.py',
    'fusion.py',
    'batch_mode.py',
]

py.install_sources(
    python_sources,
    pure: false,
    subdir: 'viqa',
)

subdir('fr_metrics')
subdir('nr_metrics')